<resources>
    <string name="app_name">Se7tak</string>
    <string name="skip">Skip</string>
    <string name="don_t_have_an_account">Don\'t have an acount ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_with">Login with</string>
    <string name="forget_password">forget your password</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="slogn">We care you 24 hour</string>
    <string name="search">Search</string>
    <string name="appintments">Appointments</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="search_by_doctor_name">Search by Doctor Name</string>
    <string name="search_by_specialty">Search by Specialty</string>
    <string name="search_txt">Search</string>
    <string name="doctor">Doctor</string>
    <string name="fees">Fees</string>
    <string name="specialty">Specialty</string>
    <string name="about_the_doctor">About the Doctor</string>
    <string name="book">Book</string>
    <string name="confirm">Confirm</string>
    <string name="your_booking_is_successful">Your booking is successful</string>
    <string name="sent_to_mail">Sent to mail</string>
    <string name="enter_valid_email">enter valid email</string>
    <string name="enter_valid_password">enter valid password</string>
    <string name="enter_valid_name">enter valid name</string>
    <string name="enter_valid_phone">enter valid phone</string>
    <string name="chosse_gender">Choosse gender</string>


    <string name="facebook_app_id">2260630220853244</string>
    <string name="fb_login_protocol_scheme">fb2260630220853244</string>
    <string name="twitter_consumer_key">lXOko7eH4EE5Ir3Gk6f9w8YzE</string>
    <string name="twitter_consumer_secret">8QKmFvwBXf5y2oQHHL7DDhHSHmxHOOqhPelGwLVHGvUI0tga4M</string>
    <string name="complete_your_information">Complete your information</string>
    <string name="you_dont_complete_regis">You don\'t complete Registration</string>
    <string name="about_the_clinic">About the clinic</string>
    <string name="egp">EGP</string>
    <string name="likes">Likes</string>
    <string name="delete_appointment">Delete Appointment</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this Appointment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="compeleted">Completed</string>
    <string name="rejected">Rejected</string>
    <string name="canceled">Canceled</string>
    <string name="rate_this_service">Rate This Doctor</string>
    <string name="comment">Comment</string>
    <string name="cancle">Cancel</string>
    <string name="done">Done</string>
    <string name="codeisrquerd">comment is require</string>
    <string name="language">Language</string>
    <string name="help_center">Help center</string>
    <string name="log_out">Log out</string>
    <string name="edit_account">Edit Account</string>
    <string name="logoutask">Are you sure you need to logout</string>
    <string name="dismisss">Dismiss</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About us</string>
    <string name="oldpassword">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="forget_password_">Forget Password</string>
    <string name="copy_right">Copy right</string>
    <string name="not_valid_user">Not Valid User</string>
    <string name="no_data_added_yet">No Data Added Yet!!</string>
    <string name="specialty_not_found">Specialty not found</string>
    <string name="over_rate">Overall rating from</string>
    <string name="vistors">visitors</string>
    <string name="comments_rates"><![CDATA[Comments & Rates]]></string>
    <string name="holiday">Holiday</string>
    <string name="new_">new</string>
</resources>
