<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/skip"
        android:padding="@dimen/_20sdp"
        android:text="@string/skip"
        android:visibility="gone"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/skip_btn"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/login_scr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/logo"
                android:background="@drawable/bottun_bac"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_13sdp"
                    app:met_baseColor="@color/colorAccent"
                    app:met_bottomTextSize="0dp"
                    app:met_floatingLabel="none"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"
                    app:met_textColorHint="@color/colorPrimary"
                    app:met_underlineColor="@color/colorAccent" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_13sdp"
                    app:met_baseColor="@color/colorAccent"
                    app:met_bottomTextSize="0dp"
                    app:met_floatingLabel="none"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"
                    app:met_textColorHint="@color/colorPrimary"
                    app:met_underlineColor="@color/colorAccent" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bottun_bac"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/btnForgetPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="10dp"
                    android:padding="4dp"
                    android:text="@string/forget_password"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_with"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp">
                    <FrameLayout
                        android:id="@+id/FrameLayout1"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1">

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/facebook_login_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/btnFacebook"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:src="@drawable/facebook" />
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/FrameLayout2"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1">

                        <com.twitter.sdk.android.core.identity.TwitterLoginButton
                            android:id="@+id/twitter_login_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />


                        <ImageView
                            android:id="@+id/btnTwitter"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:src="@drawable/twitter" />

                    </FrameLayout>


                    <ImageView
                        android:id="@+id/btnGoogle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/icon_google_plus" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:text="@string/don_t_have_an_account" />

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_margin="4dp"
                    android:background="@drawable/button_account"
                    android:text="@string/create_new_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/textViewCopyRight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|bottom"
                    android:gravity="bottom|center"
                    android:paddingTop="8dp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/copy_right"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>